--- a/assets/css2/styles2.css
+++ b/assets/css2/styles2.css
@@ -510,4 +510,5 @@ nav a {
 .t {
   border-left: orange 2.5px solid;
   padding-left: 5px;
+  font-size: 40px;
 }/*# sourceMappingURL=styles2.css.map */
