--- a/assets/css3/styles3.css
+++ b/assets/css3/styles3.css
@@ -424,4 +424,5 @@ nav a {
 .t {
   border-left: orange 2.5px solid;
   padding-left: 5px;
+  font-size: 40px;
 }/*# sourceMappingURL=styles3.css.map */
