--- a/assets/css/_grid.scss
+++ b/assets/css/_grid.scss
@@ -1,4 +1,31 @@
 .grid{
     display: grid;
-    grid-template-columns: 200px 200px 200px;
+    grid-template-areas: "card card card";
+    justify-items: center;
+    .card1{
+        grid-area: "card1";
+    }
+    .card2{
+        grid-area: "card2";
+    }
+    .card3{
+        grid-area: "card3";
+    }
+    @media(max-width:780px){
+        grid-template-areas: 
+        "card1"
+        "card2"
+        "card3";
+        justify-items: center;
+        align-items: center;
+    @media(max-width:514px){
+        grid-template-areas: 
+        "card1"
+        "card2"
+        "card3";
+        justify-items: center;
+        align-items: center;
+    }
 }
+}
+
