--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,7 @@
 .t {
   border-left: orange 2.5px solid;
   padding-left: 5px;
+  font-size: 40px;
 }
 
 * {
@@ -107,17 +108,11 @@
 
 a {
   text-decoration: none;
-  font-style: none;
-}
-
-body {
-  margin: 0px;
 }
 
 .head {
   display: flex;
   align-items: center;
-  width: 100%;
   background-color: #D9D9D9;
   height: 100px;
 }
@@ -129,16 +124,6 @@ body {
   margin-left: 15px;
   width: 50%;
   background-color: white;
-}
-@media (min-width: 1550px) {
-  .pesquisa {
-    height: 60px;
-  }
-}
-@media (max-width: 480px) {
-  .pesquisa {
-    width: 90%;
-  }
 }
 
 .input {
@@ -181,38 +166,61 @@ body {
 
 .sec {
   width: 100%;
-  height: 85vh;
+  display: flex;
+  justify-content: center;
 }
 
 .nav2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-top: 4%;
   background: #A2CFFE;
-  gap: 50px;
   border-radius: 16px;
   margin-left: 5%;
   margin-right: 5%;
 }
-
-a {
-  margin-top: 2%;
-  margin-bottom: 2%;
-}
-a .card {
+.nav2 a {
   display: flex;
   justify-content: center;
-  align-items: center;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+  margin: 3%;
+}
+.nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
   color: white;
   background-size: cover;
   border-radius: 12px;
-  width: 25.88vw;
-  height: 15.82vw;
-  font-family: jura;
+  margin: 5%;
+  width: 25vw;
+  height: 15vw;
+  font-family: Arial;
   letter-spacing: 5px;
-  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2vw;
   box-shadow: rgba(0, 0, 0, 0.466) 0px 2px 2px 2px;
+}
+@media (max-width: 884px) {
+  .nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
+    width: 222.33px;
+    height: 133.4px;
+  }
+}
+@media (max-width: 780px) {
+  .nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 490px) {
+  .nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
+    font-size: 20px;
+  }
 }
 
 .com {
@@ -252,9 +260,44 @@ a .card {
   font-size: 50px;
   text-align: center;
 }
-@media (max-width: 768) {
+@media (max-width: 1250px) {
   .destaque .titulododestaque {
-    font-size: larger;
+    font-size: 45px;
+  }
+}
+@media (max-width: 872px) {
+  .destaque .titulododestaque {
+    font-size: 35px;
+  }
+}
+@media (max-width: 500px) {
+  .destaque .titulododestaque {
+    font-size: 15px;
+  }
+}
+@media (max-width: 490px) {
+  .destaque .titulododestaque {
+    font-size: 10px;
+  }
+}
+@media (max-width: 1250px) {
+  .destaque .aviaodestaque {
+    font-size: 45px;
+  }
+}
+@media (max-width: 872px) {
+  .destaque .aviaodestaque {
+    font-size: 35px;
+  }
+}
+@media (max-width: 500px) {
+  .destaque .aviaodestaque {
+    font-size: 15px;
+  }
+}
+@media (max-width: 490px) {
+  .destaque .aviaodestaque {
+    font-size: 10px;
   }
 }
 .destaque .alinha {
@@ -273,6 +316,11 @@ a .card {
   width: 325px;
   height: 225px;
 }
+@media (max-width: 500px) {
+  .destaque .alinha .imagemdestaque img {
+    display: none;
+  }
+}
 .destaque .alinha .textodestaque {
   background-color: #d9d9d9;
   border-radius: 10px;
@@ -284,28 +332,18 @@ a .card {
   flex-direction: column;
 }
 .destaque .alinha .textodestaque .text {
-  margin: 20px;
   font-size: large;
   text-align: justify;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  margin: 3% 3% 0 3%;
 }
-.destaque .alinha .textodestaque a {
-  font-size: large;
-  text-align: justify;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-style: none;
-  text-decoration: none;
-  color: black;
-}
-.destaque .alinha .textodestaque a:hover {
-  transition: 0.5s;
-  color: #5c5c5c;
+.destaque .alinha .textodestaque .saibamais {
+  margin-left: 3%;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 nav {
@@ -325,5 +363,29 @@ nav a {
 
 .grid {
   display: grid;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-areas: "card card card";
+  justify-items: center;
+}
+.grid .card1 {
+  grid-area: "card1";
+}
+.grid .card2 {
+  grid-area: "card2";
+}
+.grid .card3 {
+  grid-area: "card3";
+}
+@media (max-width: 780px) {
+  .grid {
+    grid-template-areas: "card1" "card2" "card3";
+    justify-items: center;
+    align-items: center;
+  }
+}
+@media (max-width: 780px) and (max-width: 514px) {
+  .grid {
+    grid-template-areas: "card1" "card2" "card3";
+    justify-items: center;
+    align-items: center;
+  }
 }/*# sourceMappingURL=styles.css.map */
