--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -63,6 +63,7 @@ a{
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 
@@ -80,11 +81,12 @@ a{
         max-width: fit-content;
         max-height: fit-content;
         margin: 3%;
+        margin: 5%;
+        padding:0;
         .card1,.card2,.card3{
             color: white;
             background-size: cover;
             border-radius: 12px;
-            margin: 5%;
             width: 25vw;
             height: 15vw;
             font-family: Arial;
@@ -162,14 +164,7 @@ a{
             font-size:35px;
 
         }
-        @media(max-width:500px){
-            font-size:15px;
 
-        }
-        @media(max-width:490px){
-            font-size:10px;
-
-        }
         
     }
     .aviaodestaque{
@@ -181,42 +176,48 @@ a{
             font-size:35px;
 
         }
-        @media(max-width:500px){
-            font-size:15px;
-
-        }
-        @media(max-width:490px){
-            font-size:10px;
-
-        }
     }
     .alinha{
-    display: flex;
+        display: grid;
+        grid-template-areas: "imgem texto";
+        align-items: center;
+        @media(max-width:1300px){
+            grid-template-areas: "imgem""texto";
+            justify-items: center;
+
+        }
+        
         .imagemdestaque{
             display: flex;
-            margin-left:2%;
-            margin-top: 3%;
+            margin: 10px;
             justify-content: center;
-            margin-bottom:3% ;
             align-items: center;
+            grid-area: "imagem";
+            max-width: 320px;
+            max-height: 225px;
             img{
                 border-radius: 10px;
-                width: 325px;
-                height: 225px;
-                @media(max-width:500px){
-                    display: none;
+                min-width: 320px;
+                min-height: 225px;
+                max-width: fit-content;
+                max-height: fit-content;
+                @media(max-width:1300){
+                max-width: 25vw;
+                max-height: 12vw;
                 }
 
             }
     
         }
         .textodestaque{
+            grid-area: "texto";
+            min-height: 225px;
             background-color: #d9d9d9;
             border-radius: 10px;
-            margin-left: 2%;
-            margin-right: 3%;
+            margin-right: 20px;
             margin-top: 3%;
             margin-bottom:3% ;
+            margin-left: 20px;
             display: flex;
             flex-direction:column ;
             .text{
@@ -226,7 +227,7 @@ a{
                 justify-content: center;
                 align-items: center;
                 text-decoration: none;
-                margin: 3% 3% 0 3%;
+                margin: 2% 3% 0 3%;
         }
         .saibamais{
             margin-left: 3%;
