--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,6 +168,7 @@ a {
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .nav2 {
@@ -185,12 +186,13 @@ a {
   max-height: -moz-fit-content;
   max-height: fit-content;
   margin: 3%;
+  margin: 5%;
+  padding: 0;
 }
 .nav2 a .card1, .nav2 a .card2, .nav2 a .card3 {
   color: white;
   background-size: cover;
   border-radius: 12px;
-  margin: 5%;
   width: 25vw;
   height: 15vw;
   font-family: Arial;
@@ -270,16 +272,6 @@ a {
     font-size: 35px;
   }
 }
-@media (max-width: 500px) {
-  .destaque .titulododestaque {
-    font-size: 15px;
-  }
-}
-@media (max-width: 490px) {
-  .destaque .titulododestaque {
-    font-size: 10px;
-  }
-}
 @media (max-width: 1250px) {
   .destaque .aviaodestaque {
     font-size: 45px;
@@ -290,44 +282,50 @@ a {
     font-size: 35px;
   }
 }
-@media (max-width: 500px) {
-  .destaque .aviaodestaque {
-    font-size: 15px;
-  }
-}
-@media (max-width: 490px) {
-  .destaque .aviaodestaque {
-    font-size: 10px;
-  }
-}
 .destaque .alinha {
-  display: flex;
+  display: grid;
+  grid-template-areas: "imgem texto";
+  align-items: center;
+}
+@media (max-width: 1300px) {
+  .destaque .alinha {
+    grid-template-areas: "imgem" "texto";
+    justify-items: center;
+  }
 }
 .destaque .alinha .imagemdestaque {
   display: flex;
-  margin-left: 2%;
-  margin-top: 3%;
+  margin: 10px;
   justify-content: center;
-  margin-bottom: 3%;
   align-items: center;
+  grid-area: "imagem";
+  max-width: 320px;
+  max-height: 225px;
 }
 .destaque .alinha .imagemdestaque img {
   border-radius: 10px;
-  width: 325px;
-  height: 225px;
+  min-width: 320px;
+  min-height: 225px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
 }
-@media (max-width: 500px) {
+@media (max-width: 1300) {
   .destaque .alinha .imagemdestaque img {
-    display: none;
+    max-width: 25vw;
+    max-height: 12vw;
   }
 }
 .destaque .alinha .textodestaque {
+  grid-area: "texto";
+  min-height: 225px;
   background-color: #d9d9d9;
   border-radius: 10px;
-  margin-left: 2%;
-  margin-right: 3%;
+  margin-right: 20px;
   margin-top: 3%;
   margin-bottom: 3%;
+  margin-left: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -338,7 +336,7 @@ a {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  margin: 3% 3% 0 3%;
+  margin: 2% 3% 0 3%;
 }
 .destaque .alinha .textodestaque .saibamais {
   margin-left: 3%;
