--- a/assets/css3/_layout3.scss
+++ b/assets/css3/_layout3.scss
@@ -17,9 +17,9 @@
   }
   
   .Pesq {
+    margin-left: 40px;
     display: flex;
     align-items: center;
-    margin-left: 25px;
     height: 50px;
     width: 75%;
     background-color: white;
@@ -35,6 +35,7 @@
   }
   
   input {
+
     display: flex;
     margin-left: 10px;
     border: none;
@@ -51,6 +52,7 @@
   }
   
   .menui {
+
     height: 75px;
     border-left: 4px solid rgb(255, 255, 255);
   }
@@ -74,21 +76,28 @@
   }
 
   .conteudo {
-    margin-top: 90px;
+    margin-top: 130px;
     display: flex;
     flex-direction: column;
     h1 {
+      text-align: center;
       display: flex;
       justify-content: center;
       font-size: 500%;
+      @media(max-width:920px){
+        font-size: 250%;
+      }
     }
     .txt {
       padding: 15px;
       border-radius: 10px;
-      margin-top: 70px;
+      margin-top: 130px;
       background-color: #d9d9d9;
-      margin-left: 25%;
-      margin-right: 25%;
+      margin-left: 10%;
+      margin-right: 10%;
+      @media(max-width:1px){
+
+      }
       p {
           line-height:1.8;
           text-indent: 2%;
@@ -98,6 +107,9 @@
         margin-left: 10px;
         margin-right: 10px;
         padding: 2px;
+        @media(max-width:920px){
+          font-size: large;
+        }
       }
     }
   }
@@ -126,7 +138,7 @@
       display: flex;
       height: 80%;
       margin-bottom:30px ;
-      padding-left:3%  ;
+      padding-left:3% ;
       padding-right: 3%;
   }
   .head{
@@ -144,7 +156,7 @@
     display: flex;
     border-radius: 15px;
     height: 35px;
-    margin-left: 15px;
+    margin-left: 5%;
     width: 50%;
     background-color: white;
   
@@ -256,53 +268,4 @@
       color: white;
       font-size: xx-large;
     }
-  }
-  .onetotwo{
-    display: flex;
-    justify-content: end;
-  }
-  
-  
-  .modal {
-    display: none; /* Esconde o modal por padrão */position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  .modal-content {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    max-width: 700px;
-    width: 80%;
-    object-fit: contain;
-    justify-content: center;
-    align-items: center;
-    img{
-      width: 120%;
-      height: 120%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      object-fit: cover;
-    }
-  }
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    color: #555;
-  }
-  
-  .close:hover {
-    color: #000;
   }
