--- a/assets/css2/_layout2.scss
+++ b/assets/css2/_layout2.scss
@@ -81,7 +81,6 @@ input {
 
 .imagem {
   border-radius: 10px;
-  width: 550px;
   background-color: #d9d9d9;
   margin-top:5%;
   display: flex;
@@ -167,8 +166,8 @@ input {
   display: flex;
   flex-direction: column;
   h1 {
-    display: flex;
-    justify-content: center;
+
+text-align: center;
     font-size: 500%;
   }
   .txt {
