--- a/assets/css2/styles2.css
+++ b/assets/css2/styles2.css
@@ -83,7 +83,6 @@ input {
 
 .imagem {
   border-radius: 10px;
-  width: 550px;
   background-color: #d9d9d9;
   margin-top: 5%;
   display: flex;
@@ -171,8 +170,7 @@ input {
   flex-direction: column;
 }
 .conteudo h1 {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   font-size: 500%;
 }
 .conteudo .txt {
